test/tests/stages/13_floating-point_numbers/valid/libraries/double_parameters_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[59]:
  int
  identifier(check_arguments)
  (
  double
  identifier(a)
  ,
  double
  identifier(b)
  ,
  double
  identifier(c)
  ,
  double
  identifier(d)
  ,
  double
  identifier(e)
  ,
  double
  identifier(f)
  ,
  double
  identifier(g)
  ,
  double
  identifier(h)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(check_arguments)
  (
  const double(1.0)
  ,
  const double(2.0)
  ,
  const double(3.0)
  ,
  const double(4.0)
  ,
  -
  const double(1.0)
  ,
  -
  const double(2.0)
  ,
  -
  const double(3.0)
  ,
  -
  const double(4.0)
  )
  ;
  }
