test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/bitwise_shift_double_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[12]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(1)
  <<
  const double(2.0)
  ;
  }
